--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Rahel | Medical Portfolio</title>
+    <title>Mrs. Rahel | Medical Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --main-bg: linear-gradient(120deg,#e0c3fc 0%, #8ec5fc 100%);
+            --main-bg: linear-gradient(120deg,#e0c3fc 0%, #fc8ece 100%);
             --primary: #5a88d8;
             --accent: #a770ef;
             --secondary: #f5f7fa;
